--- a/client/www/app/healthStats/healthStats.html
+++ b/client/www/app/healthStats/healthStats.html
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="bar bar-header">
       <a class="button icon-left ion-ios-arrow-left button-clear button-dark" ui-sref="dashboard"></a>
-      <h1 class="title">Health Stats</h1>
+      <h1 class="title">My Health Stats</h1>
     </div>
   </div class="row">
-  <ion-content class="main-menu">
+  <ion-content class="user-health-stats">
     <div class="card">
       <div class="item item-text-wrap">
         <p> Adderall Side Effects </p>
