--- a/client/www/index.html
+++ b/client/www/index.html
@@ -34,11 +34,12 @@
   <!-- app-->
   <script src="app/app.js"></script>
   <!-- controllers -->
-  <script src="app/dashboard/dashboard.js"></script>
-  <script src="app/medsForm/medsForm.js"></script>
   <script src="app/auth/auth.js"></script>
-  <script src="app/medications/medications.js"></script>
+  <script src="app/calendar/calendar.js"></script>
+  <script src="app/dashboard/dashboard.js"></script>
   <script src="app/healthStats/healthStats.js"></script>
+  <script src="app/medications/medications.js"></script>
+  <script src="app/medsForm/medsForm.js"></script>
   <!-- services -->
   <script src="app/services.js"></script>
 </head>
