--- a/client/www/app/medications/medications.html
+++ b/client/www/app/medications/medications.html
@@ -9,7 +9,7 @@
     <ion-list show-delete="false" can-swipe="true">
       <ion-item ng-repeat="medication in medications">
         <h2><b> {{medication.info.name}} {{medication.info.dosage}} </b></h2>
-        <p> {{medication.info.reminder}} </p>
+        <p> {{medication.info.instruct}} </p>
         <ion-option-button class="button-balanced icon ion-edit" ng-click="editMedication(medication)"></ion-option-button>
         <ion-option-button class="button-assertive icon ion-trash-a" ng-click="removeReminder(medication)"></ion-option-button>
       </ion-item>
