(fix) style fix for medications

--- a/server/public/app/common/navbar/navbar.html
+++ b/server/public/app/common/navbar/navbar.html
@@ -1,6 +1,6 @@
 <section class="nav-bar">
 
-  <a ui-sref="view-medications">
+  <a href="#/medications">
     <div class="view-tab nav-tab">
 
       <h2>View<br>Medications</h2>
@@ -8,7 +8,7 @@
     </div>
   </a>
 
-  <a ui-sref="add-medication">
+  <a ui-sref="addMedication">
     <div class="lower-tab nav-tab add-medication">
 
       <h2>Add<br>Medication</h2>
