(feat) web client responsive

--- a/server/public/app/common/navbar/navbar.html
+++ b/server/public/app/common/navbar/navbar.html
@@ -1,4 +1,4 @@
-<section class="nav-bar">
+<section class="nav-bar" ng-hide="!isAuth.value">
 
   <a href="#/medications">
     <div class="view-tab nav-tab">
