(fix) local notifications working

--- a/client/www/app/dashboard/dashboard.html
+++ b/client/www/app/dashboard/dashboard.html
@@ -17,8 +17,8 @@
         <p> Calendar </p>
       </div>
       <div class="col col-50">
-        <img src="../img/alarm.png" ui-sref="medsForm">
-        <p> Add Reminder </p>
+        <img src="http://i66.tinypic.com/21ndusk.png" ui-sref="medsForm">
+        <p> Schedule Meds </p>
       </div>
     </div>
     <div class="row">
@@ -34,13 +34,13 @@
     <hr>
     <!-- Health Chart -->
     <div class="row healthChart">
-      <div class="col col-100">
-        <nvd3 options="options" data="data"></nvd3>
-      </div>
+        <div class="Resize">
+          <nvd3 options="options" data="data"></nvd3>
+        </div>
     </div>
   </ion-content>
   <!-- Footer -->
-  <div class="bar bar-footer bar-royal">
+  <div class="bar bar-footer bar-royal user-dashboard-footer">
     <button class="my-footer button button-clear "> Side Effects </button>
     <div class="title"> Today I'm feeling? </div>
     <button class="my-footer button button-clear"> Improvement </button>
