--- a/client/www/app/healthStats/healthStats.html
+++ b/client/www/app/healthStats/healthStats.html
@@ -24,7 +24,7 @@
       <div class="item item-text-wrap">
         <p> Compliance </p>
         <br>
-        <canvas id="compliance" class="chart chart-doughnut" chart-data="compliance" chart-labels="complianceLabels">
+        <canvas id="compliance" class="chart chart-doughnut" chart-colours="colors" chart-data="compliance" chart-labels="complianceLabels">
         </canvas>
       </div>
     </div>
