--- a/client/www/index.html
+++ b/client/www/index.html
@@ -10,6 +10,7 @@
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/release/js/ionic.bundle.js"></script>
+  <script src="lib/ionic-timepicker/dist/ionic-timepicker.bundle.min.js"></script>
   <!-- material design -->
   <script src="lib/ionic-material/dist/ionic.material.min.css"></script>
   <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
