(feat) calendar view with dummy data

--- a/client/www/app/auth/signin.html
+++ b/client/www/app/auth/signin.html
@@ -7,7 +7,7 @@
       </label>
       <hr>
       <label class="item item-input item-floating-label">
-        <input type="text" placeholder="Password" ng-model="user.password">
+        <input type="password" placeholder="Password" ng-model="user.password">
       </label>
       <hr>
       <button class="button button-block button-royal" ng-click="signin()"> Open MedUp </button>
