--- a/client/www/app/dashboard/dashboard.html
+++ b/client/www/app/dashboard/dashboard.html
@@ -14,7 +14,7 @@
     <div class="row">
       <div class="col col-50">
         <img src="http://i64.tinypic.com/2qv4k9d.png" ui-sref="calendar">
-        <p> Calendar </p>
+        <p> Due Today </p>
       </div>
       <div class="col col-50">
         <img src="http://i66.tinypic.com/21ndusk.png" ui-sref="medsForm">
