--- a/client/www/app/dashboard/dashboard.html
+++ b/client/www/app/dashboard/dashboard.html
@@ -41,8 +41,8 @@
   </ion-content>
   <!-- Footer -->
   <div class="bar bar-footer bar-royal user-dashboard-footer">
-    <button class="my-footer button button-clear "> Side Effects </button>
+    <button class="my-footer button button-clear"></button>
     <div class="title"> Today I'm feeling? </div>
-    <button class="my-footer button button-clear"> Improvement </button>
+    <button class="my-footer button button-clear"></button>
   </div>
 </ion-view>
