(feat) create StandardTimeMeridean Directive for displaying time

--- a/client/www/app/medsForm/medsForm.html
+++ b/client/www/app/medsForm/medsForm.html
@@ -11,8 +11,8 @@
         <label class="item item-input item-floating-label"> <span class="input-label">Medication Name</span>
           <input type="text" placeholder="Medication Name (e.g. Adderall)" ng-model="med.info.name"> </label>
 	<ionic-timepicker input-obj="timePickerObject">
-          <button class="button button-block button-positive overflowShow">
-            <standard-time-meridian etime='timePickerObject.inputEpochTime'></standard-time-meridian>
+          <button ngmodel="med.info.time" class="button button-block button-positive overflowShow">
+            <standard-time-meridian etime='timePickerObject.inputEpochTime'>{{time.hours}}</standard-time-meridian>
           </button>
         </ionic-timepicker>	
         <label class="item item-input item-floating-label"> <span class="input-label">Instructions</span>
