(feat) views for healthlog
the views include fatigue, health, pain, sideeffects and overallHealth

--- a/client/www/index.html
+++ b/client/www/index.html
@@ -26,6 +26,17 @@
   <script src="lib/angular-ui-clock/dist/angular-clock.js"></script>
   <link rel="stylesheet" href="lib/angular-ui-clock/dist/angular-clock.css">
   <link href="//fonts.googleapis.com/css?family=Syncopate:400,700" rel="stylesheet" type="text/css">
+  <!-- modal -->
+  <link href="lib/ionic-nifty-modal/nifty.modal.css" rel="stylesheet">
+  <!-- jsTags -->
+  <script src="lib/jsTag/jsTag/compiled/jsTag.min.js"></script>
+  <script src="lib/jsTag/jsTag/compiled/jsTag.debug.js"></script>
+  <link rel="stylesheet" href="lib/jsTag/jsTag/compiled/jsTag.css">
+  <!-- typeahead -->
+  <script src="lib/jquery/dist/jquery.min.js"></script>
+  <script src="lib/typeahead.js/dist/typeahead.bundle.js"></script>
+  <script src="lib/typeahead.js/dist/bloodhound.js"></script>
+  <script src="lib/angular-typeahead/angular-typeahead.min.js"></script>
   <!-- my css -->
   <link href="css/style.css" rel="stylesheet">
   <!-- cordova script -->
@@ -37,6 +48,7 @@
   <script src="app/auth/auth.js"></script>
   <script src="app/calendar/calendar.js"></script>
   <script src="app/dashboard/dashboard.js"></script>
+  <script src="app/healthlog/healthlog.js"></script>
   <script src="app/healthStats/healthStats.js"></script>
   <script src="app/medications/medications.js"></script>
   <script src="app/medsForm/medsForm.js"></script>
@@ -45,7 +57,7 @@
 </head>
 
 <body ng-app="medup">
-  <ion-nav-view> Nav </ion-nav-view>
+  <ion-nav-view></ion-nav-view>
 </body>
 
 </html>
