(fix) twitters typeahead showing examples

--- a/client/www/app/healthlog/overallHealth.html
+++ b/client/www/app/healthlog/overallHealth.html
@@ -6,7 +6,7 @@
     <ion-list>
       <div class="row">
         <div class="col col-50">
-          <ion-radio ng-model="choice" ng-value="'A'">Worse</ion-radio>
+          <ion-radio ng-model="choice" ng-value="'A'">Stable</ion-radio>
         </div>
         <div class="col col-50">
           <ion-radio ng-model="choice" ng-value="'A'">Improving</ion-radio>
