--- a/client/www/app/healthlog/sideeffects.html
+++ b/client/www/app/healthlog/sideeffects.html
@@ -3,8 +3,10 @@
     <button class="button button-clear icon ion-ios-arrow-left" ng-click="closeModal('sideeffects')"> </button>
     <h3 class="user-modal-title">Side Effects</h3>
     <br />
-    <js-tag js-tag-mode="typeahead" js-tag-options="jsTagOptions"></js-tag>
+    <div class="user-modal-input">
+      <js-tag js-tag-mode="typeahead" js-tag-options="jsTagOptions"></js-tag>
+    </div>
     <br />
-    <button class="button button-block button-royal" ng-click="openOverallHealth()"> continue </button>
+    <button class="button button-block button-royal" ng-click="openOverallHealth()"> Continue </button>
   </ion-content>
 </ion-modal-view>
