(fix) added more charts to healthStats and made sure data is ready to be saved to the database.

--- a/client/www/app/dashboard/dashboard.html
+++ b/client/www/app/dashboard/dashboard.html
@@ -35,7 +35,7 @@
     <!-- Health Chart -->
     <div class="row healthChart">
       <div class="Resize">
-        <nvd3 options="options" data="data"></nvd3>
+        <nvd3 options="options" data="data.dashgraph"></nvd3>
       </div>
     </div>
   </ion-content>
