--- a/client/www/app/healthlog/sideeffects.html
+++ b/client/www/app/healthlog/sideeffects.html
@@ -4,7 +4,7 @@
     <h3 class="user-modal-title">Side Effects</h3>
     <br />
     <div class="user-modal-input">
-      <js-tag js-tag-mode="typeahead" js-tag-options="jsTagOptions"></js-tag>
+      <js-tag js-tag-options="jsTagOptions"></js-tag>
     </div>
     <br />
     <button class="button button-block button-royal" ng-click="openOverallHealth()"> Continue </button>
