(fix) set medications state chahe to false so view reloads

--- a/client/www/app/medsForm/medsForm.html
+++ b/client/www/app/medsForm/medsForm.html
@@ -28,12 +28,12 @@
           <div class="col col-50">
             <label class="item item-input item-select">
               <div class="input-label">Unit:</div>
-              <select>
+              <select ngmodel="med.info.unit">
                 <option>oz</option>
                 <option selected>mg</option>
                 <option>mcg</option>
                 <option>g</option>
-                <option>fld.</option>
+                <option>fld</option>
               </select>
             </label>
           </div>
